# hammerstone-framework

./: .gitignore  .gitmodules  .luacheckrc  CMakeLists.txt  README.md  changelog.md  lich_changelog.txt  modInfo.lua  readme.md  steam_description.txt  workshop.mjl
assets/: hammerstone.kra
chunks/: actionUI_innerWheel.lua  actionUI_innerWheelInit.lua  actionUI_updateButtons.lua  manageButtonsUI_init.lua  manageUI_changeTitle.lua  manageUI_modeInfos.lua  manageUI_titleIcon.lua  planHelper_getTerrainPlans.lua  planManager_updateImpossibleStateForCraftAreaAvailibilityChange.lua  planManager_updateImpossibleStateForResourceAvailabilityChange.lua  planManager_updateImpossibleStateForSkillChange.lua  planManager_updateImpossibleStateForStorageAreaContainedObjectsPlanChange.lua  planManager_updateImpossibleStateForStorageAvailibilityChange.lua  planManager_updateImpossibleStateForTerrainTypeAvailibilityChange.lua
docs/: Developing.md  Installing.md  README.md  inputManager.md  localeManager.md  logger.md  readme.md  uiManager.md
localizations/en_us/: localizations.lua
models/: icon_modOptions.glb  ui_radialMenu_inner_4_bottom.glb  ui_radialMenu_inner_4_left.glb  ui_radialMenu_inner_4_right.glb  ui_radialMenu_inner_4_top.glb
patches/: View_new_patch.lua
patches/common/: planHelper.lua
patches/server/: planManager.lua
schemas/: material.schema.json  object.schema.json  recipe.schema.json  storage.schema.json
scripts/: hammerAPI.lua
scripts/common/: action.lua  actionSequence.lua  animationGroups.lua  buildable.lua  constructable.lua  craftAreaGroup.lua  craftable.lua  evolvingObject.lua  fuel.lua  gameObject.lua  harvestable.lua  locale.lua  material.lua  modManager.lua  model.lua  modelPlaceholder.lua  notification.lua  order.lua  plan.lua  planHelper.lua  research.lua  resource.lua  seat.lua  skill.lua  storage.lua  terrainTypes.lua  tool.lua  typeMaps.lua
scripts/erectus/: cheatManager.lua  eventManager.lua  eventTypes.lua  inputManager.lua  logging.lua  uiManager.lua
scripts/hammerstone/: globals.lua  initializer.lua  logging.lua
scripts/logicThread/: logic.lua
src/: biome.c
(+92 files in other folders)
